--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,9 +34,9 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="./js/websockets.js"></script>
     <script type="module">
-        import { Game } from "/js/scenes/game.js";
-        import { Menu } from "/js/scenes/menu.js";
-        import { GameOver } from "/js/scenes/gameOver.js";
+        import { Game } from "https://mathple-two.vercel.app/js/scenes/game.js";
+        import { Menu } from "https://mathple-two.vercel.app/js/scenes/menu.js";
+        import { GameOver } from "https://mathple-two.vercel.app/js/scenes/gameOver.js";
 
         const game = new Phaser.Game({
             backgroundColor: "#eee",
